--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactfire": "^2.0.0-alpha.3"
+    "reactfire": "^2.0.0-alpha.3",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
